<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:todev="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="@dimen/size_medium_plus"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/size_medium_minus"
      android:layout_marginTop="@dimen/size_medium_minus"
      android:text="@string/dialog_add_service_title"
      android:textColor="@color/colorDark"
      android:textSize="@dimen/font_size_medium_plus"
      android:textStyle="bold"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="@dimen/divider_tiny"
      android:layout_marginBottom="@dimen/size_large"
      android:layout_marginEnd="@dimen/size_inverse_medium_plus"
      android:layout_marginLeft="@dimen/size_inverse_medium_plus"
      android:layout_marginRight="@dimen/size_inverse_medium_plus"
      android:layout_marginStart="@dimen/size_inverse_medium_plus"
      android:layout_marginTop="@dimen/size_medium_plus"
      android:background="@color/colorDark"
      android:padding="@dimen/size_none"
      />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/label_edit_text_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/size_medium_plus"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/label_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_add_service_label"
        />

  </android.support.design.widget.TextInputLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/address_edit_text_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_medium_plus"
        android:layout_weight="1"
        >

      <android.support.v7.widget.AppCompatEditText
          android:id="@+id/address_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/dialog_add_service_address"
          />

    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:padding="@dimen/size_medium"
        android:src="@drawable/ic_search_white"
        android:theme="@style/RabbitmqManagement.Widget.Button"
        />

  </LinearLayout>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/dialog_add_service_port"
      android:textSize="@dimen/font_size_medium_plus"
      />

  <com.todev.rabbitmqmanagement.ui.login.widget.PortNumberPicker
      android:id="@+id/port_number_picker"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      todev:initial_port_number="15672"
      />

</LinearLayout>
