<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card:cardElevation="@dimen/elevation_resting"
    card:cardUseCompatPadding="true"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_medium"
        android:paddingTop="@dimen/size_medium"
        >

      <TextView
          android:id="@+id/title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:paddingEnd="@dimen/size_medium"
          android:paddingLeft="@dimen/size_medium"
          android:paddingRight="@dimen/size_medium"
          android:paddingStart="@dimen/size_medium"
          android:text="@string/message_rates_title"
          android:textColor="@color/colorDark"
          android:textSize="@dimen/font_size_medium"
          android:textStyle="bold"
          />

      <ImageButton
          android:id="@+id/range"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:contentDescription="@null"
          android:src="@drawable/ic_more_gray"
          style="@android:style/Widget.Holo.Button.Borderless"
          />

    </RelativeLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/messages_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/chart_min_height"
        android:paddingBottom="@dimen/size_medium"
        android:paddingTop="@dimen/size_medium"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/size_medium"
        android:paddingTop="@dimen/size_medium"
        >

      <Button
          android:id="@+id/ready_button"
          android:layout_width="@dimen/size_none"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/queued_messages_ready"
          android:textColor="@color/queuedMessagesReady"
          style="@style/RabbitmqManagement.Widget.Button.Borderless.Colored"
          />

      <Button
          android:id="@+id/unacked_button"
          android:layout_width="@dimen/size_none"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/queued_messages_unacked"
          android:textColor="@color/queuedMessagesUnacked"
          style="@style/RabbitmqManagement.Widget.Button.Borderless.Colored"
          />

      <Button
          android:id="@+id/total_button"
          android:layout_width="@dimen/size_none"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/queued_messages_total"
          android:textColor="@color/queuedMessagesTotal"
          style="@style/RabbitmqManagement.Widget.Button.Borderless.Colored"
          />

    </LinearLayout>

  </LinearLayout>

</android.support.v7.widget.CardView>
