<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/row_1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

    <android.support.v7.widget.CardView
        android:id="@+id/exchanges_card"
        android:layout_width="@dimen/size_none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_small"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_medium"
            android:text="@string/exchanges"
            />

        <TextView
            android:id="@+id/exchanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="@dimen/size_medium"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="15"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/queues_card"
        android:layout_width="@dimen/size_none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_small"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_medium"
            android:text="@string/queues"
            />

        <TextView
            android:id="@+id/queues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="@dimen/size_medium"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="378"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>

  <LinearLayout
      android:id="@+id/row_2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

    <android.support.v7.widget.CardView
        android:id="@+id/connections_card"
        android:layout_width="@dimen/size_none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_small"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_medium"
            android:text="@string/connections"
            />

        <TextView
            android:id="@+id/connections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="@dimen/size_medium"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="120"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/consumers_card"
        android:layout_width="@dimen/size_none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_small"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_medium"
            android:text="@string/consumers"
            />

        <TextView
            android:id="@+id/consumers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="@dimen/size_medium"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="31"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/channels_card"
        android:layout_width="@dimen/size_none"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card:cardElevation="@dimen/elevation_resting"
        card:cardUseCompatPadding="true"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/size_small"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_medium"
            android:text="@string/channels"
            />

        <TextView
            android:id="@+id/channels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="@dimen/size_medium"
            android:paddingEnd="@dimen/size_medium"
            android:paddingLeft="@dimen/size_medium"
            android:paddingRight="@dimen/size_medium"
            android:paddingStart="@dimen/size_medium"
            android:paddingTop="@dimen/size_small"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            tools:text="65"
            />

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </LinearLayout>

</LinearLayout>
